[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/event_chain/editor/src/editor/gui/editor_view.gd" type="Script" id=1]
[ext_resource path="res://addons/event_chain/editor/src/editor/gui/create_template.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/event_chain/editor/src/editor/gui/add_node_panel.tscn" type="PackedScene" id=3]

[sub_resource type="AnimatedTexture" id=1]
frames = 8
fps = 12.0
frame_1/delay_sec = 0.0
frame_2/delay_sec = 0.0
frame_3/delay_sec = 0.0
frame_4/delay_sec = 0.0
frame_5/delay_sec = 0.0
frame_6/delay_sec = 0.0
frame_7/delay_sec = 0.0

[node name="TemplateEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemplateParent" type="VBoxContainer" parent="PanelContainer"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TemplateControls" type="HBoxContainer" parent="PanelContainer/TemplateParent"]
margin_right = 1010.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 0

[node name="Left" type="HBoxContainer" parent="PanelContainer/TemplateParent/TemplateControls"]
margin_right = 702.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Autosave" type="CheckBox" parent="PanelContainer/TemplateParent/TemplateControls/Left"]
margin_right = 87.0
margin_bottom = 24.0
pressed = true
text = "Autosave"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="PanelContainer/TemplateParent/TemplateControls/Left"]
margin_left = 97.0
margin_right = 138.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 4
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="PanelContainer/TemplateParent/TemplateControls/Left"]
margin_left = 148.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 4
text = "Replay simulation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/TemplateParent/TemplateControls/Left"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 284.0
margin_right = 288.0
margin_bottom = 24.0

[node name="LoadingIndicator" type="HBoxContainer" parent="PanelContainer/TemplateParent/TemplateControls/Left"]
margin_left = 298.0
margin_right = 419.0
margin_bottom = 24.0

[node name="TextureRect" type="TextureRect" parent="PanelContainer/TemplateParent/TemplateControls/Left/LoadingIndicator"]
margin_top = 11.0
margin_right = 1.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 8, 8 )
size_flags_vertical = 4
texture = SubResource( 1 )

[node name="Label" type="Label" parent="PanelContainer/TemplateParent/TemplateControls/Left/LoadingIndicator"]
margin_left = 5.0
margin_top = 5.0
margin_right = 121.0
margin_bottom = 19.0
text = "Generating output"

[node name="Right" type="HBoxContainer" parent="PanelContainer/TemplateParent/TemplateControls"]
margin_left = 706.0
margin_right = 1010.0
margin_bottom = 24.0
custom_constants/separation = 20

[node name="GraphName" type="Label" parent="PanelContainer/TemplateParent/TemplateControls/Right"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 19.0
size_flags_horizontal = 0
text = "MyGraphName"

[node name="ClearTemplate" type="Button" parent="PanelContainer/TemplateParent/TemplateControls/Right"]
margin_left = 115.0
margin_right = 221.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 4
text = "Clear template"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearGraph" type="Button" parent="PanelContainer/TemplateParent/TemplateControls/Right"]
margin_left = 241.0
margin_right = 304.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 4
text = "Clear all"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="PanelContainer/TemplateParent"]
margin_top = 28.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_vertical = 3
scroll_offset = Vector2( -896, -480 )

[node name="AddNodeDialog" parent="." instance=ExtResource( 3 )]

[node name="LoadOrCreateTemplate" parent="." instance=ExtResource( 2 )]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfirmationDialogClearAll" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.5
margin_top = -35.0
margin_right = 159.5
margin_bottom = 35.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Clear all"
dialog_text = "Delete all the graph nodes from this template ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialogClearTemplate" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.5
margin_top = -35.0
margin_right = 159.5
margin_bottom = 35.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
window_title = "Clear template"
dialog_text = "Clear the associated template?
(The template file will remain on disk)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoGraphSelected" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NoGraphSelected"]
margin_left = 7.0
margin_top = 282.0
margin_right = 1017.0
margin_bottom = 318.0
custom_constants/line_spacing = 8
text = "Select a EventChainGraph node to 
start the graph edition"
align = 1
valign = 1
[connection signal="toggled" from="PanelContainer/TemplateParent/TemplateControls/Left/Autosave" to="." method="_on_autosave_toggled"]
[connection signal="pressed" from="PanelContainer/TemplateParent/TemplateControls/Left/SaveButton" to="." method="save_template"]
[connection signal="pressed" from="PanelContainer/TemplateParent/TemplateControls/Left/ReplayButton" to="." method="replay_simulation"]
[connection signal="pressed" from="PanelContainer/TemplateParent/TemplateControls/Right/ClearTemplate" to="ConfirmationDialogClearTemplate" method="popup_centered"]
[connection signal="pressed" from="PanelContainer/TemplateParent/TemplateControls/Right/ClearGraph" to="ConfirmationDialogClearAll" method="popup_centered"]
[connection signal="create_node" from="AddNodeDialog" to="." method="_on_create_node_request"]
[connection signal="hide_panel" from="AddNodeDialog" to="." method="_hide_node_dialog"]
[connection signal="confirmed" from="ConfirmationDialogClearAll" to="." method="_clear_graph"]
[connection signal="confirmed" from="ConfirmationDialogClearTemplate" to="." method="_clear_template"]
